// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 gGefDa"
  id={null}
  rows={null}
>
  <div
    className="Card__CardWrapper-sc-1g3s676-3 gQuyrN"
    href={null}
    id="storyshots_10"
    media={null}
    onClick={null}
  />
  <div
    className="Card__CardWrapper-sc-1g3s676-3 gQuyrN"
    href={null}
    id="storyshots_11"
    media={null}
    onClick={null}
  />
  <div
    className="Card__CardWrapper-sc-1g3s676-3 gQuyrN"
    href={null}
    id="storyshots_12"
    media={null}
    onClick={null}
  />
  <div
    className="Card__CardWrapper-sc-1g3s676-3 gQuyrN"
    href={null}
    id="storyshots_13"
    media={null}
    onClick={null}
  />
</section>
`;

exports[` 2`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 gGefDa"
  id={null}
  rows="auto"
>
  <div
    className="Card__CardWrapper-sc-1g3s676-3 gQuyrN"
    href={null}
    id="storyshots_14"
    media={null}
    onClick={null}
  />
  <div
    className="Card__CardWrapper-sc-1g3s676-3 gQuyrN"
    href={null}
    id="storyshots_15"
    media={null}
    onClick={null}
  />
  <div
    className="Card__CardWrapper-sc-1g3s676-3 gQuyrN"
    href={null}
    id="storyshots_16"
    media={null}
    onClick={null}
  />
  <div
    className="Card__CardWrapper-sc-1g3s676-3 gQuyrN"
    href={null}
    id="storyshots_17"
    media={null}
    onClick={null}
  />
  <div
    className="Card__CardWrapper-sc-1g3s676-3 gQuyrN"
    href={null}
    id="storyshots_18"
    media={null}
    onClick={null}
  />
  <div
    className="Card__CardWrapper-sc-1g3s676-3 gQuyrN"
    href={null}
    id="storyshots_19"
    media={null}
    onClick={null}
  />
  <div
    className="Card__CardWrapper-sc-1g3s676-3 gQuyrN"
    href={null}
    id="storyshots_20"
    media={null}
    onClick={null}
  />
  <div
    className="Card__CardWrapper-sc-1g3s676-3 gQuyrN"
    href={null}
    id="storyshots_21"
    media={null}
    onClick={null}
  />
  <div
    className="Card__CardWrapper-sc-1g3s676-3 gQuyrN"
    href={null}
    id="storyshots_22"
    media={null}
    onClick={null}
  />
  <div
    className="Card__CardWrapper-sc-1g3s676-3 gQuyrN"
    href={null}
    id="storyshots_23"
    media={null}
    onClick={null}
  />
  <div
    className="Card__CardWrapper-sc-1g3s676-3 gQuyrN"
    href={null}
    id="storyshots_24"
    media={null}
    onClick={null}
  />
  <div
    className="Card__CardWrapper-sc-1g3s676-3 gQuyrN"
    href={null}
    id="storyshots_25"
    media={null}
    onClick={null}
  />
</section>
`;

exports[` 3`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 gGefDa"
  id={null}
  rows={null}
>
  <div
    className="Card__CardWrapper-sc-1g3s676-3 gQuyrN"
    href={null}
    id="storyshots_26"
    media={null}
    onClick={null}
  />
  <div
    className="Card__CardWrapper-sc-1g3s676-3 gQuyrN"
    href={null}
    id="storyshots_27"
    media={null}
    onClick={null}
  />
  <div
    className="Card__CardWrapper-sc-1g3s676-3 gQuyrN"
    href={null}
    id="storyshots_28"
    media={null}
    onClick={null}
  />
  <div
    className="Card__CardWrapper-sc-1g3s676-3 gQuyrN"
    href={null}
    id="storyshots_29"
    media={null}
    onClick={null}
  />
  <div
    className="Card__CardWrapper-sc-1g3s676-3 gQuyrN"
    href={null}
    id="storyshots_30"
    media={null}
    onClick={null}
  />
  <div
    className="Card__CardWrapper-sc-1g3s676-3 gQuyrN"
    href={null}
    id="storyshots_31"
    media={null}
    onClick={null}
  />
  <div
    className="Card__CardWrapper-sc-1g3s676-3 gQuyrN"
    href={null}
    id="storyshots_32"
    media={null}
    onClick={null}
  />
  <div
    className="Card__CardWrapper-sc-1g3s676-3 gQuyrN"
    href={null}
    id="storyshots_33"
    media={null}
    onClick={null}
  />
  <div
    className="Card__CardWrapper-sc-1g3s676-3 gQuyrN"
    href={null}
    id="storyshots_34"
    media={null}
    onClick={null}
  />
  <div
    className="Card__CardWrapper-sc-1g3s676-3 gQuyrN"
    href={null}
    id="storyshots_35"
    media={null}
    onClick={null}
  />
  <div
    className="Card__CardWrapper-sc-1g3s676-3 gQuyrN"
    href={null}
    id="storyshots_36"
    media={null}
    onClick={null}
  />
  <div
    className="Card__CardWrapper-sc-1g3s676-3 gQuyrN"
    href={null}
    id="storyshots_37"
    media={null}
    onClick={null}
  />
</section>
`;

exports[` 4`] = `
<section
  className="Grid__GridWrapper-sc-1ntp7gx-0 ebCpoO"
  id={null}
  rows="100px 3fr 1fr"
>
  <div
    className="Card__CardWrapper-sc-1g3s676-3 gQuyrN"
    href={null}
    id="storyshots_38"
    media={null}
    onClick={null}
  />
  <div
    className="Card__CardWrapper-sc-1g3s676-3 gQuyrN"
    href={null}
    id="storyshots_39"
    media={null}
    onClick={null}
  />
  <div
    className="Card__CardWrapper-sc-1g3s676-3 gQuyrN"
    href={null}
    id="storyshots_40"
    media={null}
    onClick={null}
  />
  <div
    className="Card__CardWrapper-sc-1g3s676-3 gQuyrN"
    href={null}
    id="storyshots_41"
    media={null}
    onClick={null}
  />
  <div
    className="Card__CardWrapper-sc-1g3s676-3 gQuyrN"
    href={null}
    id="storyshots_42"
    media={null}
    onClick={null}
  />
  <div
    className="Card__CardWrapper-sc-1g3s676-3 gQuyrN"
    href={null}
    id="storyshots_43"
    media={null}
    onClick={null}
  />
  <div
    className="Card__CardWrapper-sc-1g3s676-3 gQuyrN"
    href={null}
    id="storyshots_44"
    media={null}
    onClick={null}
  />
  <div
    className="Card__CardWrapper-sc-1g3s676-3 gQuyrN"
    href={null}
    id="storyshots_45"
    media={null}
    onClick={null}
  />
  <div
    className="Card__CardWrapper-sc-1g3s676-3 gQuyrN"
    href={null}
    id="storyshots_46"
    media={null}
    onClick={null}
  />
  <div
    className="Card__CardWrapper-sc-1g3s676-3 gQuyrN"
    href={null}
    id="storyshots_47"
    media={null}
    onClick={null}
  />
  <div
    className="Card__CardWrapper-sc-1g3s676-3 gQuyrN"
    href={null}
    id="storyshots_48"
    media={null}
    onClick={null}
  />
  <div
    className="Card__CardWrapper-sc-1g3s676-3 gQuyrN"
    href={null}
    id="storyshots_49"
    media={null}
    onClick={null}
  />
</section>
`;
